fix: downgrade to Java 17 compatibility, remove unused Main.java, and add unit tests